feat: CLIN-2163 - cleanup